--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,13 +7,28 @@ body{
 
 }
 #container{
-    width: 70%;
-    padding: 50px;
-    text-align: center;
+    width: 100%;
+    padding: 20px;
+    text-align: left;
     border: 1px solid black;
-    margin: 0 auto;
+    margin: auto;
 }
 
+#cabecera{
+    background-color: blue;
+    color: white;
+    box-shadow: 0px 2px 50px 0px gray;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+}
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 25px;
+
+}
 #container h1{
     font-size: 20px;
 }
