--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: black;
+    color: blue;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
